.metadata/.plugins/org.eclipse.cdt.ui/OledUVSensor2.build.log
21:42:12 **** Build of configuration Debug for project OledUVSensor2 ****
make all 
Building file: ../Src/main.c
Invoking: MCU GCC Compiler
D:\code\githubrepos\nucleo\OledUVSensor2\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32L432xx -I"D:/code/githubrepos/nucleo/OledUVSensor2/Inc" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc/Legacy" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/CMSIS/Device/ST/STM32L4xx/Include" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/CMSIS/Include"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/main.d" -MT"Src/main.o" -o "Src/main.o" "../Src/main.c"
../Src/main.c: In function 'MX_GPIO_Init':
../Src/main.c:186:21: warning: unused variable 'GPIO_InitStruct' [-Wunused-variable]
    GPIO_InitTypeDef GPIO_InitStruct;
                     ^~~~~~~~~~~~~~~
Finished building: ../Src/main.c
 
Building file: ../Src/ssd1360.c
Invoking: MCU GCC Compiler
D:\code\githubrepos\nucleo\OledUVSensor2\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32L432xx -I"D:/code/githubrepos/nucleo/OledUVSensor2/Inc" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc/Legacy" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/CMSIS/Device/ST/STM32L4xx/Include" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/CMSIS/Include"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/ssd1360.d" -MT"Src/ssd1360.o" -o "Src/ssd1360.o" "../Src/ssd1360.c"
Finished building: ../Src/ssd1360.c
 
Building file: ../Src/stm32l4xx_hal_msp.c
Invoking: MCU GCC Compiler
D:\code\githubrepos\nucleo\OledUVSensor2\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32L432xx -I"D:/code/githubrepos/nucleo/OledUVSensor2/Inc" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc/Legacy" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/CMSIS/Device/ST/STM32L4xx/Include" -I"D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/CMSIS/Include"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/stm32l4xx_hal_msp.d" -MT"Src/stm32l4xx_hal_msp.o" -o "Src/stm32l4xx_hal_msp.o" "../Src/stm32l4xx_hal_msp.c"
In file included from D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4xx.h:238:0,
                 from D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_def.h:46,
                 from D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rcc.h:45,
                 from ../Src/stm32l4xx_hal_msp.c:222:
D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:580:1: error: unknown type name 'HAL_StatusTypeDef'
 HAL_StatusTypeDef HAL_Init(void);
 ^~~~~~~~~~~~~~~~~
D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:581:1: error: unknown type name 'HAL_StatusTypeDef'
 HAL_StatusTypeDef HAL_DeInit(void);
 ^~~~~~~~~~~~~~~~~
D:/code/githubrepos/nucleo/OledUVSensor2/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:584:1: error: unknown type name 'HAL_StatusTypeDef'
 HAL_StatusTypeDef HAL_InitTick (uint32_t TickPriority);
 ^~~~~~~~~~~~~~~~~
Src/subdir.mk:30: recipe for target 'Src/stm32l4xx_hal_msp.o' failed
make: *** [Src/stm32l4xx_hal_msp.o] Error 1

21:42:16 Build Finished (took 3s.152ms)

